--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_height="372dp"
         android:layout_centerInParent="true"
         android:background="@color/white"
+        android:scaleType="fitXY"
         android:src="@drawable/image_icon" />
 
     <Button
@@ -21,6 +22,7 @@
         android:layout_below="@id/ImageView1"
         android:layout_marginTop="10dp"
         android:text="Pick an image"
+        android:theme="@style/Button.Typep1"
         android:layout_marginLeft="52dp"
         />
 
