--- a/app/src/main/res/drawable/backgradient.xml
+++ b/app/src/main/res/drawable/backgradient.xml
@@ -2,10 +2,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:startColor="@color/design_default_color_primary_dark"
+
+        android:startColor="@color/cor4"
         android:centerColor="@color/ColoPrimary"
         android:endColor="@color/teal_200"
-        android:angle="90"/>
+
+
+        android:angle="45"/>
 
 
 </shape>
