--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@ android:background="@drawable/backgradient"
         android:background="@drawable/take_shape"
         android:text="Pick an image"
         android:elevation="10dp"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ImageView1"
@@ -47,12 +48,14 @@ android:background="@drawable/backgradient"
         android:background="@drawable/button_shape"
         android:elevation="10dp"
         android:text="Take photo"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ImageView1"
         app:layout_constraintVertical_bias="0.26" />
 
     <TextView
+
         android:id="@+id/TextView1"
         android:background="@android:color/transparent"
         android:layout_width="294dp"
@@ -62,7 +65,9 @@ android:background="@drawable/backgradient"
         android:text="Your Result"
         android:textAlignment="center"
         android:textAllCaps="true"
-        android:textSize="20dp"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/ImageView1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,7 +82,9 @@ android:background="@drawable/backgradient"
         android:layout_centerHorizontal="true"
         android:textAlignment="center"
         android:textAllCaps="true"
-        android:textSize="20dp"
+        android:textSize="22dp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
         android:background="@android:color/transparent"
         app:layout_constraintBottom_toTopOf="@+id/ImageView1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -88,15 +95,15 @@ android:background="@drawable/backgradient"
 
     <ImageButton
         android:id="@+id/info"
-        android:layout_width="76dp"
-        android:layout_height="60dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_above="@id/TextView1"
         android:background="@drawable/button_shape"
         android:elevation="10dp"
         android:src="@drawable/ic_info"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.51"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ImageView1"
         app:layout_constraintVertical_bias="0.778" />
