--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,9 +7,19 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
+    <color name="cor4">#3C3FFF</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="teal_500">#24BAF6</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="cor1">#BCFFF9</color>
+    <color name="cor2">#7AFDFF</color>
+    <color name="cor3">#48d1cc</color>
+    <color name="corVerde">#C4F48C</color>
+    <color name="corVerde2">#78A361</color>
+    <color name="corVerde3">#4CAF50</color>
+
+
 </resources>
+
